--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<link rel="stylesheet" type="text/css" href="css/colorbox.css">
 
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+
+	<!--  -->
+	<script type="text/javascript" src="js/jquery.fancybox.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css" media="screen" />
+	<link rel="stylesheet" href="css/jquery.fancybox-buttons.css" type="text/css" media="screen" />
+	<script type="text/javascript" src="js/jquery.fancybox-buttons.js"></script>
+	<script type="text/javascript" src="js/jquery.fancybox-media.js"></script>
+	<link rel="stylesheet" href="css/jquery.fancybox-thumbs.css" type="text/css" media="screen" />
+	<script type="text/javascript" src="js/jquery.fancybox-thumbs.js"></script>
+	<!--  -->
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
@@ -180,51 +190,51 @@
 					<table>
 						<tr>
 							<td>
-								<a href="images/buckinghamWM-1.jpg" class="colorBox" id="buckingham">
+								<a href="images/buckinghamWM-1.jpg" class="colorBox" rel="group" id="buckingham">
 									<img src="images/buckinghamWM-1.jpg" class="colorBoximg">
 								</a>
 							</td>
 							<td>
-								<a href="images/florenceWM-1.jpg" class="colorBox" id="florence">
+								<a href="images/florenceWM-1.jpg" class="colorBox" rel="group" id="florence">
 									<img src="images/florenceWM-1.jpg" class="colorBoximg">
 								</a>
 							</td>
 							<td>
-								<a href="images/spanishstepsWM-1.jpg" class="colorBox" id="spanishsteps">
+								<a href="images/spanishstepsWM-1.jpg" class="colorBox" rel="group" id="spanishsteps">
 									<img src="images/spanishstepsWM-1.jpg" class="colorBoximg">
 								</a>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<a href="images/vaticanWM-1.jpg" class="colorBox" id="vatican">
+								<a href="images/vaticanWM-1.jpg" class="colorBox" rel="group" id="vatican">
 									<img src="images/vaticanWMthumb-1.jpg" class="colorBoximg">
 								</a>
 							</td>
 							<td>
-								<a href="images/eiffelWM-1.jpg" class="colorBox" id="eiffel">
+								<a href="images/eiffelWM-1.jpg" class="colorBox" rel="group" id="eiffel">
 									<img src="images/eiffelWM-1.jpg" class="colorBoximg">
 								</a>
 							</td>
 							<td>
-								<a href="images/tcmWM-1.jpg" class="colorBox" id="tcm">
+								<a href="images/tcmWM-1.jpg" class="colorBox" rel="group" id="tcm">
 									<img src="images/tcmWM-1.jpg" class="colorBoximg">
 								</a>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<a href="images/pondWM-1.jpg" class="colorBox" id="pond">
+								<a href="images/pondWM-1.jpg" class="colorBox" rel="group" id="pond">
 									<img src="images/pondWM-1.jpg" class="colorBoximg">
 								</a>
 							</td>
 							<td>
-								<a href="images/dragonflyWM-1.jpg" class="colorBox" id="dragonfly">
+								<a href="images/dragonflyWM-1.jpg" class="colorBox" rel="group" id="dragonfly">
 									<img src="images/dragonflyWM-1.jpg" class="colorBoximg">
 								</a>
 							</td>
 							<td>
-								<a href="images/alligatorWM.jpg" class="colorBox" id="alligator">
+								<a href="images/alligatorWM.jpg" class="colorBox" rel="group" id="alligator">
 									<img src="images/alligatorWM.jpg" class="colorBoximg">
 								</a>
 							</td>
