--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</div>
 			<!-- SCHOOL -->
 			<div class="content_cat" id="content_education">
-				<p class="acc_title" id="umich">University of Michigan - Ann Arbor</p>
+				<p class="acc_title notSelectedTitle " id="umich">University of Michigan - Ann Arbor</p>
 				<div class="acc_body">
 					<div class="section">
 						<img src="images/umich_logo.jpg" class="image" id="umich_logo"/>
@@ -96,7 +96,7 @@
 					</div>
 				</div>
 
-				<p class="acc_title" id="lcn">L'Anse Creuse High School - North</p>
+				<p class="acc_title notSelectedTitle" id="lcn">L'Anse Creuse High School - North</p>
 				<div class="acc_body">
 					<div class="section">
 						<img src="images/lcn.jpg" class="image" id="lcn_logo"/>
@@ -122,7 +122,7 @@
 			</div>
 			<!-- WORK -->
 			<div class="content_cat" id="content_work">
-				<p class="acc_title" id="panera">Panera Bread - Associate</p>
+				<p class="acc_title notSelectedTitle" id="panera">Panera Bread - Associate</p>
 				<div class="acc_body">
 					<div class="section">
 						<img src="images/panera.jpg" class="image" id="panera_logo"/>
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 
-				<p class="acc_title" id="mjr">MJR Digital Cinemas - Concession Supervisor</p>
+				<p class="acc_title notSelectedTitle" id="mjr">MJR Digital Cinemas - Concession Supervisor</p>
 				<div class="acc_body">
 					<div class="section">
 						<img src="images/mjr.jpg" class="image" id="mjr_logo"/>
@@ -154,7 +154,7 @@
 					</div>
 				</div>
 
-				<p class="acc_title" id="mtll">Macomb Township Little League - Umpire</p>
+				<p class="acc_title notSelectedTitle" id="mtll">Macomb Township Little League - Umpire</p>
 				<div class="acc_body">
 					<div class="section">
 						<img src="images/mtll.bmp" class="image" id="mtll_logo"/>
@@ -176,13 +176,13 @@
 				</div>
 			</div>
 			<div class="content_cat" id="content_interests">
-				<p class="acc_title" id="music">Music</p>
+				<p class="acc_title notSelectedTitle" id="music">Music</p>
 				<div class="info_chunk" id="music_cont">
 					<p>I played guitar as a member of <a href="https://www.facebook.com/pages/Kill-the-Author/145648588804223?ref=br_tf" text-decoration="none" target="_new">Kill the Author</a>, a local band formed with a group of my friends and played at many venues ranging from concert halls to school gyms for fundraisers. We were together from 2010-2012.</p>
 					<div class="widget_iframe" style="display:inline-block;width:100%;height:320px;margin:0;padding:0;border:0;box-shadow: 4px 4px 15px #888888;"><iframe class="widget_iframe" src="https://www.reverbnation.com/widget_code/html_widget/artist_1182179?widget_id=50&pwc[design]=default&pwc[background_color]=%23333333&pwc[included_songs]=1&pwc[photo]=0%2C1&pwc[size]=fit" width="100%" height="100%" frameborder="0" scrolling="no"></iframe><div class="footer_branding" style="margin-top:-5px;font-size:10px;font-family:Arial;"></div></div>
 				</div>
 
-				<p class="acc_title" id="photo">Photography</p>
+				<p class="acc_title notSelectedTitle" id="photo">Photography</p>
 				<div class="info_chunk" id="photo_cont">
 					<p>For full size and higher resolution prints, feel free to<br>
 					 e-mail me at <a href="mailto:russtrup@umich.edu" id="email" target="_new">russtrup@umich.edu</a></p>
