--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="css/jquery.fancybox-thumbs.css" type="text/css" media="screen" />
 	<script type="text/javascript" src="js/jquery.fancybox-thumbs.js"></script>
 	<!--  -->
-	
+
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	<script type="text/javascript" src="jquery-ui-accordion.js"></script>
@@ -27,7 +27,7 @@
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-	<div id="wrapper">
+	<!-- <div id="wrapper"> -->
 		<div id="header">
 			<p class="header_contents no_comments"><a href="index.html">Russell Trupiano</a></p>
 			<p	class="header_contents comments"><a href="index.html">
@@ -35,16 +35,26 @@
 			<p class="header_contents comments"><a href="index.html">
 				<span class="hidden">// </span>Computer Science Engineer<span class="perm_hidden"> //</span></a></p>
 		</div>
-		<div class="divider"></div>
+	<div id="wrapper">
+
+		<!-- <div class="divider"></div> -->
 		<div id="menu">
 			<div class="nav_item" id="_home">Home</div>
+			<!-- <div class="divider_v"></div> -->
 			<div class="nav_item" id="_education">Education</div>
+			<!-- <div class="divider_v"></div> -->
 			<div class="nav_item" id="_work">Employment</div>
+			<!-- <div class="divider_v"></div> -->
+			<div class="nav_item" id="_skills">Skills</div>
+			<!-- <div class="divider_v"></div> -->
 			<div class="nav_item" id="_projects">Projects</div>
-			<div class="nav_item" id="_interests">Interests</div>
-			<div class="nav_item" id="_resume">Resume</div>
+			<!-- <div class="divider_v"></div> -->
+			<div class="nav_item" id="_interests">Extras</div>
+			<!-- <div class="divider_v"></div> -->
+			<div class="nav_item" id="_resume">Resume(.pdf)</div>
 		</div>
 		<!-- <div class="divider_v"></div> -->
+	<!-- <div id="wrapper"> -->
 		<div id="content">
 			<!-- HOME -->
 			<div class="content_cat" id="content_home">
