--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-	<!-- <div id="wrapper"> -->
+	<div id="wrapper">
 		<div id="header">
 			<p class="header_contents no_comments"><a href="index.html">Russell Trupiano</a></p>
 			<p	class="header_contents comments"><a href="index.html">
@@ -35,7 +35,7 @@
 			<p class="header_contents comments"><a href="index.html">
 				<span class="hidden">// </span>Computer Science Engineer<span class="perm_hidden"> //</span></a></p>
 		</div>
-	<div id="wrapper">
+	<!-- <div id="wrapper"> -->
 
 		<!-- <div class="divider"></div> -->
 		<table id="menu" width="1100px">
@@ -201,7 +201,7 @@
 					<p>For full size and higher resolution prints, feel free to<br>
 					 e-mail me at <a href="mailto:russtrup@umich.edu" id="email" target="_new">russtrup@umich.edu</a></p>
 
-					<table>
+					<table width="100%">
 						<tr>
 							<td>
 								<a href="images/buckinghamWM-1.jpg" class="colorBox" rel="group" id="buckingham">
@@ -218,13 +218,13 @@
 									<img src="images/spanishstepsWM-1.jpg" class="colorBoximg">
 								</a>
 							</td>
-						</tr>
-						<tr>
 							<td>
 								<a href="images/vaticanWM-1.jpg" class="colorBox" rel="group" id="vatican">
 									<img src="images/vaticanWMthumb-1.jpg" class="colorBoximg">
 								</a>
 							</td>
+						</tr>
+						<tr>
 							<td>
 								<a href="images/eiffelWM-1.jpg" class="colorBox" rel="group" id="eiffel">
 									<img src="images/eiffelWM-1.jpg" class="colorBoximg">
@@ -235,8 +235,6 @@
 									<img src="images/tcmWM-1.jpg" class="colorBoximg">
 								</a>
 							</td>
-						</tr>
-						<tr>
 							<td>
 								<a href="images/pondWM-1.jpg" class="colorBox" rel="group" id="pond">
 									<img src="images/pondWM-1.jpg" class="colorBoximg">
@@ -247,6 +245,8 @@
 									<img src="images/dragonflyWM-1.jpg" class="colorBoximg">
 								</a>
 							</td>
+						</tr>
+						<tr>
 							<td>
 								<a href="images/alligatorWM.jpg" class="colorBox" rel="group" id="alligator">
 									<img src="images/alligatorWM.jpg" class="colorBoximg">
@@ -258,10 +258,10 @@
 			</div>
 			<!-- RESUME -->
 			<div class="content_cat" id="content_resume">
-				<iframe src="docs/russelltrupiano.pdf" scrolling="yes" id="res_frame"></iframe>
+				<iframe scrolling="yes" id="res_frame"></iframe>
 			</div>
 		</div>
-		<div class="divider"></div>
+		<!-- <div class="divider"></div> -->
 		<div id="footer">
 			<div id="footer_left">
 				<p>&copy Russell Trupiano. All Rights Reserved.</p>
@@ -274,15 +274,11 @@
 					<tbody>
 						<tr>
 							<td class="type_comm">E-Mail:</td>
-							<td class="comm_link"><a href="mailto:russtrup@umich.edu" class="comm_link" target="_new">russtrup@umich.edu</a></td>
+							<td class="comm_link"><a href="mailto:russtrup@umich.edu" class="comm_link" target="_blank">russtrup@umich.edu</a></td>
 						</tr>
 						<tr>
 							<td class="type_comm">Facebook:</td>
 							<td class="comm_link"><a href="https://www.facebook.com/russelltrupiano" class="comm_link" target="_new">Russell Trupiano</a></td>
-						</tr>
-						<tr>
-							<td class="type_comm">Phone:</td>
-							<td class="comm_link"><a href="#">586.610.3785</a></td>
 						</tr>
 					</tbody>
 				</table>
