--- a/index.html
+++ b/index.html
@@ -180,6 +180,89 @@
 					</div>
 				</div>
 			</div>
+			<!-- SKILLS -->
+			<div class="content_cat" id="content_skills">
+				<table id="skills_table">
+					<tbody>
+						<tr>
+							<td class="skill_cat">Engineering</td>
+							<td class="skill">C++</td>
+							<td class="rank"><div class="score_bar">
+								<div class="green" id="cpp"></div>
+							</div></td>
+						</tr>
+						<tr><td colspan="3"><div class="divider"></div></td></tr>
+						<tr>
+							<td></td>
+							<td class="skill">Java/Android</td>
+							<td class="rank"><div class="score_bar">
+								<div class="red" id="java"></div>
+							</div></td>
+						</tr>
+						<tr><td colspan="3"><div class="divider"></div></td></tr>
+						<tr>
+							<td class="skill_cat">Web Development</td>
+							<td class="skill">HTML/CSS/Javascript/jQuery</td>
+							<td class="rank"><div class="score_bar">
+								<div class="yellow" id="web"></div>
+							</div></td>
+						</tr>
+						<tr><td colspan="3"><div class="divider"></div></td></tr>
+						<tr>
+							<td class="skill_cat">Server Side</td>
+							<td class="skill">Python/PHP</td>
+							<td class="rank"><div class="score_bar">
+								<div class="red" id="script"></div>
+							</div></td>
+						</tr>
+						<tr><td colspan="3"><div class="divider"></div></td></tr>
+						<tr>
+							<td class="skill_cat">Applications</td>
+							<td class="skill">Photoshop</td>
+							<td class="rank"><div class="score_bar">
+								<div class="green" id="ps"></div>
+							</div></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td class="skill">Final Cut Pro</td>
+							<td class="rank"><div class="score_bar">
+								<div class="yellow" id="fcp"></div>
+							</div></td>
+						</tr>
+						<tr><td colspan="3"><div class="divider"></div></td></tr>
+						<tr>
+							<td class="skill_cat">Operating Systems</td>
+							<td class="skill">Unix/Linux/Mac OSX</td>
+							<td class="rank"><div class="score_bar"
+								><div class="green" id="os"></div>
+							</div></td>
+						</tr>
+						<tr><td colspan="3"><div class="divider"></div></td></tr>
+						<tr>
+							<td class="skill_cat">Personal Skills</td>
+							<td class="skill">Leadership</td>
+							<td class="rank"><div class="score_bar"
+								><div class="yellow" id="leadership"></div>
+							</div></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td class="skill">Creativity</td>
+							<td class="rank"><div class="score_bar"
+								><div class="yellow" id="creative"></div>
+							</div></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td class="skill">Self-Motivation</td>
+							<td class="rank"><div class="score_bar"
+								><div class="green" id="motive"></div>
+							</div></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 			<!-- PROJECTS -->
 			<div class="content_cat" id="content_projects">
 				<div class="section">
