--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Russell Trupiano - Personal</title>
+	<title>Russell Trupiano</title>
 	<link rel="shortcut icon" href="http://www.favicongenerator.com/favicon2/logo_no_words_or_bg-20130516-favicon.ico">
 	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"/>
 	<link rel="stylesheet" type="text/css" href="css/colorbox.css">
@@ -38,7 +38,7 @@
 	<!-- <div id="wrapper"> -->
 
 		<!-- <div class="divider"></div> -->
-		<table id="menu" width="1100px">
+		<table id="menu">
 			<tbody>
 				<tr>
 					<td class="nav_item" id="_home">Home</td>
